Fix styles on Safari

--- a/src/static/stylesheets/main.css
+++ b/src/static/stylesheets/main.css
@@ -7,6 +7,7 @@
 }
 
 .sss-main {
+  display: block;
   width: 100%;
   margin-top: -35vh;
 }
